Add second step, handle hello and progress link click. Create new css file.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html>
     <head>
         <script src="index.js"></script>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <a href="https://google.com" id="hello-link">Hello!</a>
+        <a href="#" id="hello-link">Hello!</a>
+        <div class="intro hide">
+           <h1>Hello!</h1>
+           <p>
+               My name is Rabia, I'm a newbie frontend developer who focuses on writing clean, elegant and efficient code.
+               I created this webpage to show my <a href="#" id="progress-link">progress.</a>
+            </p>
+        </div>
+        <div class="detail hide">
+            <p></p>
+            <p>You can also check my profiles out on:</p>
+            <ul>
+                <li><a href="https://www.freecodecamp.org/rabia-begum">freeCodeCamp</a></li>
+                <li><a href="https://www.codewars.com/users/rabia-begum">Codewars</a></li>
+                <li><a href="https://github.com/rabia-begum">GitHub</a></li>
+            </ul>
+            <p>...but my website doesn't seems completed, <a href="#">does it?</a></p>
+        </div>
+        
+       
     </body>
 </html>
 
