--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html>
     <head>
         <script src="index.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Merienda&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <a href="#" id="hello-link">Hello!</a>
-        <div class="intro hide">
-           <h1>Hello!</h1>
-           <p>
-               My name is Rabia, I'm a newbie frontend developer who focuses on writing clean, elegant and efficient code.
-               I created this webpage to show my <a href="#" id="progress-link">progress.</a>
-            </p>
+        <div class="container">
+            <a href="#" id="hello-link">Hello!</a>
+            <div class="intro hide">
+            <h1>Hello!</h1>
+            <p>
+                My name is Rabia, I'm a newbie frontend developer who focuses on writing clean, elegant and efficient code.
+                I created this webpage to show my <a href="#" id="progress-link">progress.</a>
+                </p>
+            </div>
+            <div class="detail hide">
+                <p>You can also check my profiles out on:</p>
+                <ul>
+                    <li><a href="https://www.freecodecamp.org/rabia-begum">freeCodeCamp</a></li>
+                    <li><a href="https://www.codewars.com/users/rabia-begum">Codewars</a></li>
+                    <li><a href="https://github.com/rabia-begum">GitHub</a></li>
+                </ul>
+                <p>...but my website doesn't seems completed, <a href="#" id="does-it-link">does it?</a></p>
+            </div>
+            <p class="picture-text hide">- I think it is much better now. How about adding some <a href="#" id="pictures-link">pictures?</a></p>
         </div>
-        <div class="detail hide">
-            <p></p>
-            <p>You can also check my profiles out on:</p>
-            <ul>
-                <li><a href="https://www.freecodecamp.org/rabia-begum">freeCodeCamp</a></li>
-                <li><a href="https://www.codewars.com/users/rabia-begum">Codewars</a></li>
-                <li><a href="https://github.com/rabia-begum">GitHub</a></li>
-            </ul>
-            <p>...but my website doesn't seems completed, <a href="#">does it?</a></p>
-        </div>
-        
-       
     </body>
 </html>
 
