--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
         <script src="index.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Merienda&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
+        <title>rabia-begum</title>
     </head>
     <body>
         <div class="container">
