Add fourth step. Load temporary images. Flex layout.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,35 @@
             <a href="#" id="hello-link">Hello!</a>
             <div class="intro hide">
             <h1>Hello!</h1>
-            <p>
-                My name is Rabia, I'm a newbie frontend developer who focuses on writing clean, elegant and efficient code.
-                I created this webpage to show my <a href="#" id="progress-link">progress.</a>
-                </p>
+            <div class="flex-container">
+                <div class="flex-item">
+                    <p>
+                        My name is Rabia, I'm a newbie frontend developer who focuses on writing clean, elegant and efficient code.
+                        I created this webpage to show my <a href="#" id="progress-link">progress.</a>
+                    </p>
+                    <div class="detail hide">
+                        <p>You can also check my profiles out on:</p>
+                        <ul>
+                            <li><a href="https://www.freecodecamp.org/rabia-begum">freeCodeCamp</a></li>
+                            <li><a href="https://www.codewars.com/users/rabia-begum">Codewars</a></li>
+                            <li><a href="https://github.com/rabia-begum">GitHub</a></li>
+                        </ul>
+                        <p>...but my website doesn't seems completed, <a href="#" id="does-it-link">does it?</a></p>
+                    </div>
+                    <p class="picture-text hide">- I think it is much better now. How about adding some <a href="#" id="pictures-link">pictures?</a></p>
+                    <p class="touch-text hide">...and last <a href="#" id="touch-link">touch!</a></p>
+                </div>
+                <div class="flex-item image-column"> 
+                    <div class="images">
+                        <img src="http://placekitten.com/g/400/500" alt="black and white kitten">
+                        <img src="http://placekitten.com/g/400/500" alt="black and white kitten">
+                        <img src="http://placekitten.com/g/400/500" alt="black and white kitten">
+
+
+                    </div>
+                </div>
             </div>
-            <div class="detail hide">
-                <p>You can also check my profiles out on:</p>
-                <ul>
-                    <li><a href="https://www.freecodecamp.org/rabia-begum">freeCodeCamp</a></li>
-                    <li><a href="https://www.codewars.com/users/rabia-begum">Codewars</a></li>
-                    <li><a href="https://github.com/rabia-begum">GitHub</a></li>
-                </ul>
-                <p>...but my website doesn't seems completed, <a href="#" id="does-it-link">does it?</a></p>
-            </div>
-            <p class="picture-text hide">- I think it is much better now. How about adding some <a href="#" id="pictures-link">pictures?</a></p>
+
         </div>
     </body>
 </html>
