--- a/index.html
+++ b/index.html
@@ -26,18 +26,16 @@
                             <li><a href="https://www.codewars.com/users/rabia-begum">Codewars</a></li>
                             <li><a href="https://github.com/rabia-begum">GitHub</a></li>
                         </ul>
-                        <p>...but my website doesn't seems completed, <a href="#" id="does-it-link">does it?</a></p>
+                        <p class="delete-target">...but my website doesn't seems completed, <a href="#" id="does-it-link">does it?</a></p>
                     </div>
-                    <p class="picture-text hide">- I think it is much better now. How about adding some <a href="#" id="pictures-link">pictures?</a></p>
-                    <p class="touch-text hide">...and last <a href="#" id="touch-link">touch!</a></p>
+                    <p class="picture-text hide delete-target">- I think it is much better now. How about adding some <a href="#" id="pictures-link">pictures?</a></p>
+                    <p class="touch-text hide delete-target">...and last <a href="#" id="touch-link">touch!</a></p>
                 </div>
                 <div class="flex-item image-column"> 
-                    <div class="images">
-                        <img src="http://placekitten.com/g/400/500" alt="black and white kitten">
-                        <img src="http://placekitten.com/g/400/500" alt="black and white kitten">
-                        <img src="http://placekitten.com/g/400/500" alt="black and white kitten">
-
-
+                    <div class="images clearfix">
+                        <img src="assets/carousel1.jpg" alt="this is me">
+                        <img src="assets/carousel2.jpg" alt="this is me">
+                        <img src="assets/carousel3.jpg" alt="this is me">
                     </div>
                 </div>
             </div>
