--- a/index.html
+++ b/index.html
@@ -33,11 +33,16 @@
                 </div>
                 <div class="flex-item image-column"> 
                     <div class="images clearfix">
-                        <img src="assets/carousel1.jpg" alt="this is me">
-                        <img src="assets/carousel2.jpg" alt="this is me">
-                        <img src="assets/carousel3.jpg" alt="this is me">
+                        <div class="carousel-container">
+                            <img data-image="0" src="assets/carousel1.jpg" alt="this is me">
+                            <img data-image="1" src="assets/carousel2.jpg" alt="this is me">
+                            <img data-image="2" src="assets/carousel3.jpg" alt="this is me">
+                        </div>
                     </div>
+                    <a href="#" class="arrow prev"><img src="assets/arrow-left.png" alt="Previous Photo"></a>
+                    <a href="#" class="arrow next"><img src="assets/arrow-right.png" alt="Next Photo"></a>
                 </div>
+
             </div>
 
         </div>
