Add footer and start over link

--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
                     <a href="#" class="arrow prev"><img src="assets/arrow-left.png" alt="Previous Photo"></a>
                     <a href="#" class="arrow next"><img src="assets/arrow-right.png" alt="Next Photo"></a>
                 </div>
-
             </div>
-
         </div>
+        <footer class="inspired-info">
+            <em>I inspired by Jeremmy Thomas - Web Design in 4 Minutes</em> - <a href="#" id="start-over-link">Start Over ↺</a>
+        </footer>
     </body>
 </html>
 
