--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                             <li><a href="https://www.codewars.com/users/rabia-begum">Codewars</a></li>
                             <li><a href="https://github.com/rabia-begum">GitHub</a></li>
                         </ul>
-                        <p class="delete-target">...but my website doesn't seems completed, <a href="#" id="does-it-link">does it?</a></p>
+                        <p class="delete-target">...but my website doesn't seem complete or, <a href="#" id="does-it-link">does it?</a></p>
                     </div>
-                    <p class="picture-text hide delete-target">- I think it is much better now. How about adding some <a href="#" id="pictures-link">pictures?</a></p>
+                    <p class="picture-text hide delete-target">I think it is much better now. How about adding some <a href="#" id="pictures-link">pictures?</a></p>
                     <p class="touch-text hide delete-target">...and last <a href="#" id="touch-link">touch!</a></p>
                 </div>
                 <div class="flex-item image-column"> 
