--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>Hello!</h1>
             <div class="flex-container">
                 <div class="flex-item">
-                    <p>
+                    <p class="bio">
                         My name is Rabia, I'm a newbie frontend developer who focuses on writing clean, elegant and efficient code.
                         I created this webpage to show my <a href="#" id="progress-link">progress.</a>
                     </p>
@@ -46,7 +46,7 @@
                         <p class="delete-target">...but my website doesn't seem complete or, <a href="#" id="does-it-link">does it?</a></p>
                     </div>
                     <p class="picture-text hide delete-target">I think it is much better now. How about adding some <a href="#" id="pictures-link">pictures?</a></p>
-                    <p class="touch-text hide delete-target">...and last <a href="#" id="touch-link">touch!</a></p>
+                    <p class="touch-text hide delete-target">...and the last <a href="#" id="touch-link">touch!</a></p>
                 </div>
                 <div class="flex-item image-column"> 
                     <div class="images clearfix">
