Don't show start-over-link add first step

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <footer class="inspired-info">
-            <em>I inspired by Jeremmy Thomas - Web Design in 4 Minutes</em> - <a href="#" id="start-over-link">Start Over ↺</a>
+            <em>I inspired by Jeremmy Thomas - Web Design in 4 Minutes</em> - <a href="#" class="hide" id="start-over-link">Start Over ↺</a>
         </footer>
     </body>
 </html>
