Add toggle automatically looping through all images with a play/pause button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     </div>
                     <a href="#" class="arrow prev"><img src="assets/arrow-left.png" alt="Previous Photo"></a>
                     <a href="#" class="arrow next"><img src="assets/arrow-right.png" alt="Next Photo"></a>
+                    <a href="#" class="state"></a>
                 </div>
             </div>
         </div>
